# The-Story-of-Uncapped-Revengence-Discord-the-3rd

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README.md.orig  README_BACKUP_11626.md  SRB2.cbp  SRB2_Debug.props  SRB2_Release.props  SRB2_common.props  SUGGESTIONS.md  Srb2.dev  The-Story-Of-Uncapped-Revengence-Discord-the-3rd.kdev4  appveyor.yml  comptime.bat  comptime.props  cpdebug.mk  srb2-vc10.sln  vcpkg-configuration.json  vcpkg.json
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
.kdev4/: The-Story-Of-Uncapped-Revengence-Discord-the-3rd.kdev4
android/app/: build.gradle
assets/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.txt  starmaniakg.pk3
assets/TSOURDt3rd-Assets/: tsourdt3rd.pk3  tsourdt3rd.pk3.orig
assets/TSoURDt3rd-Assets/: player.dta  tsourdt3rd.pk3  (+1 more)
debian-template/: control  copyright
doc/: Holepunch Protocol.txt  Holepunch-Protocol.txt
libs/: DLL-README.txt  SDL2.props  SDL_mixer.props  discord-game-sdk.props  discord-rpc.props  discord_game_sdk.props  libgme.props  libopenmpt.props  libpng.props  zlib.props
scripts/: make-macos-universal.sh
src/: .DirIcon  Android.mk  CMakeLists.txt  CMakeLists.txt.orig  Makefile  Sourcefile  am_map.c  asm_defs.inc  b_bot.c  byteptr.h  command.c  command.h  config.h.in  config.h.in.orig  console.c  console.h  d_clisrv.c  d_clisrv.c.orig  d_clisrv.h  d_clisrv.h.orig  d_event.h  d_main.c  d_main.c.orig  d_main.h  d_net.c  d_net.h  d_netcmd.c  d_netcmd.c.orig  d_netcmd.h  d_netcmd.h.orig  d_netfil.c  d_netfil.c.orig  d_netfil.h  d_player.h  deh_lua.c  deh_soc.c  deh_soc.h  deh_tables.c  deh_tables.h  dehacked.c  (+172 more)
src/STAR/: CMakeLists.txt  Sourcefile  m_menu.c  m_menu.h  p_saveg.c  p_saveg.h  p_user.c  p_user.h  parsed.c  parsed.h  parser.c  parser.h  s_sound.c  s_sound.h  smkg-cvars.c  smkg-cvars.h  smkg-d_clisrv.c  smkg-defs.h  smkg-i_sys.h  smkg-jukebox.c  smkg-jukebox.h  smkg-misc.c  smkg-misc.h  smkg-misc_purefat.c  smkg-misc_purefat.h  smkg-p_saveg.c  smkg-p_saveg.h  smkg-st_hud.c  smkg-st_hud.h  smkg-v_video.c  smkg-v_video.h  smkg_g_inputs.c  smkg_g_inputs.h  smkg_misc_purefat.c  smkg_misc_purefat.h  ss_cmds.c  ss_cmds.h  ss_inputs.c  ss_inputs.h  ss_main.c  (+11 more)
src/STAR/core/: smkg-d_main.c  smkg-d_main.h  smkg-g_game.c  smkg-g_game.h  smkg-p_pads.c  smkg-p_pads.h  smkg-p_setup.c  smkg-p_setup.h  smkg-r_main.c  smkg-r_main.h  smkg-s_audio.c  smkg-s_audio.h  smkg-s_exmusic.c  smkg-s_exmusic.h  smkg-s_jukebox.c  smkg-s_jukebox.h  smkg-v_draw.c
src/STAR/core/exmusic_types/: smkg-bosses.c  smkg-defaultmaptracks.c  smkg-gameover.c  smkg-intermission.c
src/STAR/curl/: CMakeLists.txt  Sourcefile  smkg-curl-routines.c  smkg-curl.c  smkg-curl.h  smkg-curl_routines.c
src/STAR/drrr/: k_console.c  k_console.h  k_cvars.c  k_cvars.h  k_doomdef.h  k_doomstat.h  k_font.c  k_font.h  k_menu.h  k_virtualkeyboard.c  kd_main.c  kg_game.c  kg_game.h  kg_input.c  kg_input.h  khu_stuff.c  khu_stuff.h  ki_joy.h  ki_system.h  kk_hud.c  kk_hud.h  kk_swap.h  km_menu.h  km_menudraw.c  km_menufunc.c  km_swap.h  kp_loop.c  kv_draw.h  kv_video.c  kv_video.h
src/STAR/drrr/menus/: k_message-box.c
src/STAR/drrr/sdl/: ki_system.c  ki_video.c
src/STAR/events/: smkg-aprilfools.c  smkg-easter.c  ss_aprilfools.c  ss_easter.c
src/STAR/junk/: smkg-unused.c
src/STAR/libav/: CMakeLists.txt  LIBAV_coders.c  LIBAV_coders.h  Sourcefile
src/STAR/lights/: smkg-coronas.h  smkg-hw_coronas.c  smkg-lights.c  smkg-lights.h  smkg-r_coronas.c
src/STAR/lua/: smkg-lu_base.c  smkg-lu_main.h  smkg-lu_script.c
src/STAR/menus/: smkg-m_draw.c  smkg-m_func.c  smkg-m_sys.h  smkg_m_draw.c  smkg_m_draw.h  smkg_m_func.c  smkg_m_func.h
src/STAR/menus/menudefs/: smkg-addons-menu.c  smkg-addons.c  smkg-multi-connection.c  smkg-multi-playersetup.c  smkg-options-discord.c  smkg-options-tsourdt3rd-audio-exmusic.c  smkg-options-tsourdt3rd-audio.c  smkg-options-tsourdt3rd-controls.c  smkg-options-tsourdt3rd-debug.c  smkg-options-tsourdt3rd-events.c  smkg-options-tsourdt3rd-extras.c  smkg-options-tsourdt3rd-game.c  smkg-options-tsourdt3rd-jukebox.c  smkg-options-tsourdt3rd-players.c  smkg-options-tsourdt3rd-readme.c  smkg-options-tsourdt3rd-savedata.c  smkg-options-tsourdt3rd-savefiles.c  smkg-options-tsourdt3rd-server.c  smkg-options-tsourdt3rd-video-lighting.c  smkg-options-tsourdt3rd-video.c  smkg-options-tsourdt3rd.c
src/STAR/menus/menudefs/transient/: drrr-message-box.c  drrr-virtual-keyboard.c  smkg-options-tsourdt3rd-extras-jukebox.c  smkg-options-tsourdt3rd-extras-snake.c
src/STAR/menus/transient/: drrr-message-box.c  drrr-virtual-keyboard.c  drrr_message-box.c  drrr_virtual-keyboard.c  options-discord.c  smkg-options-discord.c  smkg-options-tsourdt3rd.c
src/STAR/misc/: smkg-m_intro.c  smkg-m_intro.h  smkg-m_misc.c  smkg-m_misc.h
src/STAR/misc/introdefs/: smkg-intros-purefat.c
src/STAR/monocypher/: CMakeLists.txt  Sourcefile  smkg-hasher.c  smkg-hasher.h  smkg-m_hash.c  smkg-m_hash.h
src/STAR/netcode/: drrr-m_swap.h  smkg-d_clisrv.c  smkg-i_protocol.c  smkg-net.h
src/STAR/padrefactor/: smkg_pad_command.c  smkg_pad_d_main.c  smkg_pad_d_main.h  smkg_pad_game.c  smkg_pad_game.h  smkg_pad_i_sys.h  smkg_pad_i_system.h  smkg_padr_main.c  smkg_padr_main.h
src/STAR/padrefactor/sdl/: smkg_pad_i_sys.c  smkg_pad_i_system.c  smkg_pad_i_vid.c
src/STAR/parser/: parsed.c  parser.c  smkg-ps_main.c  smkg-ps_main.h  smkg-ps_tools.c  smkg-script.h
src/STAR/parser/defs/: smkg-ps_def_exmusdef.c  smkg-ps_def_jukedef.c
src/STAR/sdl/: smkg-i_sys.c  smkg-i_vid.c
src/STAR/sdl/pads/: smkg_pad-i_sys.c
src/STAR/stun/: stun.c  stun.h
src/discord/: CMakeLists.txt  Sourcefile  discord.c  discord.h  discord_cmds.c  discord_cmds.h  discord_common.c  discord_data.c  discord_gamesdk.c  discord_gamesdk.h  discord_menu.c  discord_menu.h  discord_net.c  discord_statuses.c  discord_statuses.h  stun.c  stun.h
src/discord/gamesdk/: CMakeLists.txt  Sourcefile  discord_gamesdk.c
src/discord/old/: discord.c  discord_gamesdk.c
src/discord/rpc/: CMakeLists.txt  Sourcefile  discord_rpc.c
(+260 files in other folders)
